[package]
name = "ezquadtree"
version = "0.0.1"
authors = ["cowboy8625 <https://github.com/cowboy8625>"]
edition = "2018"
description = "Simple and easy to use QuadTree"
readme = "README.md"
repository = "https://github.com/cowboy8625/ezquadtree"
license = "Apache-2.0"
keywords = ["quadtree", "tree", "algorithm", "data-structure"]
categories = ["Data Structure", "Algorithms"]

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/cowboy8625/ezquadtree" }
is-it-maintained-open-issues = { repository = "https://github.com/cowboy8625/ezquadtree" }
maintenance = { status = "actively-developed" }

